--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 
+  
+  /*smooth*/
+  .module {
+    scroll-behavior: [ auto | smooth ];
+  }
   /* navbar*/
   .navbar {
     font-size: 18px;
@@ -59,6 +64,7 @@
   }
   .fullpage {
     display:flex;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content:space-between;
     margin:0 auto;
@@ -74,7 +80,8 @@
     padding-left: 10px;
     padding-top:20px;
     display:flex;
-    justify-content:space-between;
+    justify-content:space-around;
+    flex-wrap: wrap;
     background-image:url(../img/bg.jpg) ;
     -webkit-background-size: cover; /* pour anciens Chrome et Safari */
     background-size: cover; /* version standardisée */
@@ -266,4 +273,3 @@ button:focus {outline-style:none;
   input[type=button]:active, input[type=submit]:active, input[type=reset]:active, button:active, .button:active{
     opacity:0.8;
   }
- 
