--- a/css/style.css
+++ b/css/style.css
@@ -3,59 +3,7 @@
   /*smooth*/
   .module {
     scroll-behavior: [ auto | smooth ];
-  }
-  /* navbar*/
-  .navbar {
-    font-size: 18px;
-    background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    padding-bottom: 10px;
-
-  }
-  
-  .main-nav {
-    list-style-type: none;
-    display: none;
-  }
-  
-  .nav-links,
-  .logo {
-    text-decoration: none;
-    color: rgba(255, 255, 255, 0.7);
-  }
-  
-  .main-nav li {
-    text-align: center;
-    margin: 15px auto;
-  }
-  
-  .logo {
-    font-family: "anton", sans serif;
-    display: inline-block;
-    font-size: 40px;
-    margin-top: 10px;
-    margin-left: 20px;
-  }
-  h2{font-family: "anton", sans serif;
-    font-size: 55px;
-    color:#fff;
-  }
-  
-  .navbar-toggle {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    cursor: pointer;
-    color: rgba(255, 255, 255, 0.8);
-    font-size: 24px;
-  }
-  
-  .active {
-    display: block;
-  
-  
-    /*flex*/
-  
+   /*flex*/
   }
   html, body: {
     font-family: "Merriweather", sans serif;
@@ -73,22 +21,25 @@
     bottom:0;
     left:0;
     right:0;
-    height: 34rem;
-   
   }
+.content {
+  z-index: 5;
+ }
   .middle {
     padding-left: 10px;
     padding-top:20px;
     display:flex;
     justify-content:space-around;
     flex-wrap: wrap;
-    background-image:url(../img/bg.jpg) ;
-    -webkit-background-size: cover; /* pour anciens Chrome et Safari */
-    background-size: cover; /* version standardisée */
-    height: 39.2rem;
+    -webkit-animation: color-change-2x 10s linear infinite alternate both;
+	  animation: color-change-2x 10s linear infinite alternate both;
   }
   .header {
   height:50px;
+  background-color: #b22cff;
+  }
+  .navbar{
+  z-index: 100;
   }
   .sidebar {
     width:40rem;
@@ -111,45 +62,25 @@
     z-index: 30;
   
   }
-  @media screen and (min-width: 768px) {
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      padding-bottom: 0;
-      height: 70px;
-      align-items: center;
+  /*anim fd*/
+  @-webkit-keyframes color-change-2x {
+    0% {
+      background: #19dcea;
     }
+    100% {
+      background: #b22cff;
+    }
+  }
+  @keyframes color-change-2x {
+    0% {
+      background: #19dcea;
+    }
+    100% {
+      background: #b22cff;
+    }
+  }
   
-    .main-nav {
-      display: flex;
-      margin-right: 30px;
-      flex-direction: row;
-      justify-content: flex-end;
-    }
-  
-    .main-nav li {
-      margin: 0;
-    }
-  
-    .nav-links {
-      margin-left: 40px;
-    }
-  
-    .logo {
-      margin-top: 0;
-    }
-  
-    .navbar-toggle {
-      display: none;
-    }
-  
-    .logo:hover,
-    .nav-links:hover {
-      color: rgba(255, 255, 255, 1);
-    }
-    
-
-    /*animation*/
+    /*animation main*/
     .motion {
     -webkit-animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) 0.3s 1 both;
             animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) 0.3s 1 both;
@@ -273,3 +204,290 @@ button:focus {outline-style:none;
   input[type=button]:active, input[type=submit]:active, input[type=reset]:active, button:active, .button:active{
     opacity:0.8;
   }
+.logoanim{
+  z-index: 2;
+  padding-top: 30%;
+  padding-bottom: 10%;
+  width: 55%;
+  animation: infinite;
+  animation-timing-function: ease-out;
+  transform-origin: bottom center;
+  animation-name: intensifies;
+  animation-duration: 5s;
+  opacity: 0.3;
+}
+
+/**
+ * Intensifies
+ * - Slowly increases in shaking and madness
+ */
+ @keyframes intensifies {
+  0% {
+    transform: translate(1px, 1px) scale(1);
+  }
+  1% {
+    transform: translate(-1px, -1px) scale(1.02);
+  }
+  2% {
+    transform: translate(1px, 2px) scale(1.04);
+  }
+  3% {
+    transform: translate(-3px, -1px) scale(1.06);
+  }
+  4% {
+    transform: translate(3px, 3px) scale(1.08);
+  }
+  5% {
+    transform: translate(-4px, -5px) scale(1.1);
+  }
+  20% {
+    transform: translate(12px, 7px) scale(1.4);
+  }
+  21% {
+    transform: translate(-11px, -13px) scale(1.42);
+  }
+  22% {
+    transform: translate(4px, 22px) scale(1.44);
+  }
+  23% {
+    transform: translate(-13px, -24px) scale(1.46);
+  }
+  24% {
+    transform: translate(23px, 5px) scale(1.48);
+  }
+  25% {
+    transform: translate(-15px, -16px) scale(1.5);
+  }
+  26% {
+    transform: translate(16px, 7px) scale(1.52);
+  }
+  27% {
+    transform: translate(-25px, -11px) scale(1.54);
+  }
+  28% {
+    transform: translate(25px, 20px) scale(1.56);
+  }
+  29% {
+    transform: translate(-16px, -20px) scale(1.58);
+  }
+  30% {
+    transform: translate(12px, 23px) scale(1.6);
+  }
+  31% {
+    transform: translate(-15px, -18px) scale(1.62);
+  }
+  32% {
+    transform: translate(3px, 27px) scale(1.64);
+  }
+  33% {
+    transform: translate(-18px, -14px) scale(1.66);
+  }
+  34% {
+    transform: translate(14px, 9px) scale(1.68);
+  }
+  35% {
+    transform: translate(-28px, -23px) scale(1.7);
+  }
+  36% {
+    transform: translate(12px, 30px) scale(1.72);
+  }
+  37% {
+    transform: translate(-25px, -27px) scale(1.74);
+  }
+  38% {
+    transform: translate(39px, 1px) scale(1.76);
+  }
+  39% {
+    transform: translate(-10px, -32px) scale(1.78);
+  }
+  40% {
+    transform: translate(15px, 35px) scale(1.8);
+  }
+  41% {
+    transform: translate(-27px, -15px) scale(1.82);
+  }
+  42% {
+    transform: translate(15px, 41px) scale(1.84);
+  }
+  43% {
+    transform: translate(-39px, -4px) scale(1.86);
+  }
+  44% {
+    transform: translate(34px, 19px) scale(1.88);
+  }
+  45% {
+    transform: translate(-4px, -45px) scale(1.9);
+  }
+  46% {
+    transform: translate(38px, 7px) scale(1.92);
+  }
+  47% {
+    transform: translate(-21px, -1px) scale(1.94);
+  }
+  48% {
+    transform: translate(19px, 6px) scale(1.96);
+  }
+  49% {
+    transform: translate(-49px, -25px) scale(1.98);
+  }
+  50% {
+    transform: translate(25px, 25px) scale(2);
+  }
+  51% {
+    transform: translate(-33px, -24px) scale(2.02);
+  }
+  52% {
+    transform: translate(45px, 36px) scale(2.04);
+  }
+  53% {
+    transform: translate(-44px, -7px) scale(2.06);
+  }
+  54% {
+    transform: translate(30px, 28px) scale(2.08);
+  }
+  55% {
+    transform: translate(-4px, -27px) scale(2.1);
+  }
+  56% {
+    transform: translate(17px, 18px) scale(2.12);
+  }
+  57% {
+    transform: translate(-4px, -12px) scale(2.14);
+  }
+  58% {
+    transform: translate(1px, 50px) scale(2.16);
+  }
+  59% {
+    transform: translate(-8px, -36px) scale(2.18);
+  }
+  60% {
+    transform: translate(29px, 26px) scale(2.2);
+  }
+  61% {
+    transform: translate(-24px, -21px) scale(2.22);
+  }
+  62% {
+    transform: translate(60px, 21px) scale(2.24);
+  }
+  63% {
+    transform: translate(-9px, -36px) scale(2.26);
+  }
+  64% {
+    transform: translate(44px, 1px) scale(2.28);
+  }
+  65% {
+    transform: translate(-38px, -40px) scale(2.3);
+  }
+  66% {
+    transform: translate(42px, 33px) scale(2.32);
+  }
+  67% {
+    transform: translate(-17px, -45px) scale(2.34);
+  }
+  68% {
+    transform: translate(1px, 17px) scale(2.36);
+  }
+  69% {
+    transform: translate(-20px, -62px) scale(2.38);
+  }
+  70% {
+    transform: translate(6px, 53px) scale(2.4);
+  }
+  71% {
+    transform: translate(-64px, -14px) scale(2.42);
+  }
+  72% {
+    transform: translate(67px, 48px) scale(2.44);
+  }
+  73% {
+    transform: translate(-47px, -39px) scale(2.46);
+  }
+  74% {
+    transform: translate(5px, 62px) scale(2.48);
+  }
+  75% {
+    transform: translate(-29px, -50px) scale(2.5);
+  }
+  76% {
+    transform: translate(5px, 60px) scale(2.52);
+  }
+  77% {
+    transform: translate(-51px, -76px) scale(2.54);
+  }
+  78% {
+    transform: translate(58px, 16px) scale(2.56);
+  }
+  79% {
+    transform: translate(-79px, -32px) scale(2.58);
+  }
+  80% {
+    transform: translate(41px, 22px) scale(2.6);
+  }
+  81% {
+    transform: translate(-43px, -48px) scale(2.62);
+  }
+  82% {
+    transform: translate(35px, 65px) scale(2.64);
+  }
+  83% {
+    transform: translate(-65px, -84px) scale(2.66);
+  }
+  84% {
+    transform: translate(62px, 73px) scale(2.68);
+  }
+  85% {
+    transform: translate(-48px, -40px) scale(2.7);
+  }
+  86% {
+    transform: translate(30px, 25px) scale(2.72);
+  }
+  87% {
+    transform: translate(-16px, -46px) scale(2.74);
+  }
+  88% {
+    transform: translate(81px, 73px) scale(2.76);
+  }
+  89% {
+    transform: translate(-79px, -76px) scale(2.78);
+  }
+  90% {
+    transform: translate(55px, 62px) scale(2.8);
+  }
+  91% {
+    transform: translate(-44px, -56px) scale(2.82);
+  }
+  92% {
+    transform: translate(46px, 91px) scale(2.84);
+  }
+  93% {
+    transform: translate(-48px, -34px) scale(2.86);
+  }
+  94% {
+    transform: translate(18px, 10px) scale(2.88);
+  }
+  95% {
+    transform: translate(-11px, -4px) scale(2.9);
+  }
+  96% {
+    transform: translate(14px, 80px) scale(2.92);
+  }
+  97% {
+    transform: translate(-29px, -54px) scale(2.94);
+  }
+  98% {
+    transform: translate(51px, 95px) scale(2.96);
+  }
+  99% {
+    transform: translate(-1001px, -4px) scale(2.98);
+  }
+  100% {
+    transform: translate(0, 0) rotate(0deg);
+  }
+}
+
+.intensifies {
+  animation-timing-function: ease-out;
+  transform-origin: bottom center;
+  animation-name: intensifies;
+  animation-duration: 5s;
+}
