--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 
-  
+  h2{
+    font-family: "anton", sans serif;
+    font-size: 3.5em;
+    color: #ffffff;
+
+  }
   /*smooth*/
   .module {
     scroll-behavior: [ auto | smooth ];
@@ -21,6 +26,8 @@
     bottom:0;
     left:0;
     right:0;
+    -webkit-animation: color-change-2x 10s linear infinite alternate both;
+	  animation: color-change-2x 10s linear infinite alternate both;
   }
 .content {
   z-index: 5;
@@ -31,8 +38,7 @@
     display:flex;
     justify-content:space-around;
     flex-wrap: wrap;
-    -webkit-animation: color-change-2x 10s linear infinite alternate both;
-	  animation: color-change-2x 10s linear infinite alternate both;
+   
   }
   .header {
   height:50px;
@@ -151,7 +157,7 @@
   top: 31.5rem;
   right: 17rem; 
   }
-button:focus {outline-style:none;
+  button:focus {outline-style:none;
   }
   #cellphone{
     text-align: center;
@@ -204,17 +210,19 @@ button:focus {outline-style:none;
   input[type=button]:active, input[type=submit]:active, input[type=reset]:active, button:active, .button:active{
     opacity:0.8;
   }
-.logoanim{
+#logoanim{
   z-index: 2;
   padding-top: 30%;
-  padding-bottom: 10%;
-  width: 55%;
+  padding-left: 5%;
+  padding-bottom: 0%;
+  width: 35%;
   animation: infinite;
-  animation-timing-function: ease-out;
-  transform-origin: bottom center;
   animation-name: intensifies;
-  animation-duration: 5s;
-  opacity: 0.3;
+animation-timing-function: ease-out;
+transform-origin: bottom center;
+animation-duration: 5s;
+opacity: 0.3;
+ 
 }
 
 /**
@@ -399,95 +407,9 @@ button:focus {outline-style:none;
   72% {
     transform: translate(67px, 48px) scale(2.44);
   }
-  73% {
-    transform: translate(-47px, -39px) scale(2.46);
-  }
-  74% {
-    transform: translate(5px, 62px) scale(2.48);
-  }
-  75% {
-    transform: translate(-29px, -50px) scale(2.5);
-  }
-  76% {
-    transform: translate(5px, 60px) scale(2.52);
-  }
-  77% {
-    transform: translate(-51px, -76px) scale(2.54);
-  }
-  78% {
-    transform: translate(58px, 16px) scale(2.56);
-  }
-  79% {
-    transform: translate(-79px, -32px) scale(2.58);
-  }
-  80% {
-    transform: translate(41px, 22px) scale(2.6);
-  }
-  81% {
-    transform: translate(-43px, -48px) scale(2.62);
-  }
-  82% {
-    transform: translate(35px, 65px) scale(2.64);
-  }
-  83% {
-    transform: translate(-65px, -84px) scale(2.66);
-  }
-  84% {
-    transform: translate(62px, 73px) scale(2.68);
-  }
-  85% {
-    transform: translate(-48px, -40px) scale(2.7);
-  }
-  86% {
-    transform: translate(30px, 25px) scale(2.72);
-  }
-  87% {
-    transform: translate(-16px, -46px) scale(2.74);
-  }
-  88% {
-    transform: translate(81px, 73px) scale(2.76);
-  }
-  89% {
-    transform: translate(-79px, -76px) scale(2.78);
-  }
-  90% {
-    transform: translate(55px, 62px) scale(2.8);
-  }
-  91% {
-    transform: translate(-44px, -56px) scale(2.82);
-  }
-  92% {
-    transform: translate(46px, 91px) scale(2.84);
-  }
-  93% {
-    transform: translate(-48px, -34px) scale(2.86);
-  }
-  94% {
-    transform: translate(18px, 10px) scale(2.88);
-  }
-  95% {
-    transform: translate(-11px, -4px) scale(2.9);
-  }
-  96% {
-    transform: translate(14px, 80px) scale(2.92);
-  }
-  97% {
-    transform: translate(-29px, -54px) scale(2.94);
-  }
-  98% {
-    transform: translate(51px, 95px) scale(2.96);
-  }
-  99% {
-    transform: translate(-1001px, -4px) scale(2.98);
-  }
+    
   100% {
     transform: translate(0, 0) rotate(0deg);
   }
 }
 
-.intensifies {
-  animation-timing-function: ease-out;
-  transform-origin: bottom center;
-  animation-name: intensifies;
-  animation-duration: 5s;
-}
