--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,254 @@
+/*css andrea*/
+  /*partier nav*/
+html {
+  background-image: url(../img/bg.jpg);
+}
+.topnav {
+  overflow: hidden;
+  font-size: 18px;
+}
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  padding: 16px;
+  text-decoration: none;
+  font-size: 30px;
+}
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+/*.topnav a.active {
+  color: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
+  font-weight: bold;
+  font-size:2rem;
+  float:left;
+}*/
 
+.topnav .icon {
+  display: none;
+}
+/*animation sur logo*/
+.active {
+  -webkit-animation: tracking-in-contract-bck 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+	        animation: tracking-in-contract-bck 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+          font-family: "anton", sans serif;
+          letter-spacing: 0.4rem;
+        }
+@-webkit-keyframes tracking-in-contract-bck {
+  0% {
+    letter-spacing: 3em;
+    -webkit-transform: translateZ(400px);
+            transform: translateZ(400px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    opacity: 1;
+  }
+}
+@keyframes tracking-in-contract-bck {
+  0% {
+    letter-spacing: 1em;
+    -webkit-transform: translateZ(400px);
+            transform: translateZ(400px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    opacity: 1;
+  }
+}
+/*fin animation logo*/
+body {
+	margin: 0;
+	padding: 0;
+  background-image:url(../img/bg.jpg);
+}
+header {
+	width: 100%;
+	padding: 15px;
+	box-sizing: border-box;
+  border-bottom: 3px solid #FFCE00;
+}
+h1 {
+		color: #F3F3F3;
+		font-size: 28px;
+		line-height: 1;
+		font-weight: 300;
+		text-align: center;
+		margin: 0;
+    margin-bottom: 15px;
+  }
+.form {
+    display: flex;
+    flex-direction: column;
+		width: 100%;
+    margin-left:1.1rem;
+    padding-right:Orem;
+    height: 80px;
+}
+#generatorpart {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 8rem;
+  width: 40%;
+  margin-left:2rem;
+  margin-right:2rem;
+  margin-top:3rem;
+  background-color: black;
+}
+input {
+  display: flex;
+  flex-direction: column;
+	font-size: 20px;
+  text-indent: 15px;
+  width: 83%;
+}
+input:active {
+  background-color: #FFCE00;
+}
+button {
+  display: flex;
+  flex-direction: column;
+	width: 30px;
+	height: 35px;
+	border: none;
+	outline: none;
+  background-color: #FFCE00;
+  color: #171717;
+  font-size: 24px;
+}
+.form button:active{
+  background-color:#e6b900;
+}
+#list {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	height: 17px;
+  width: 90%;
+  margin-right:0.5rem;
+  max-height: 500px;
+  margin:20px;;
+}
+.list-item {
+  display: flex;
+	flex-direction: column;
+	justify-content: center;
+	height: 10px;
+	background: #FFFFFF;
+  border-bottom: 1px solid #FFCE00;
+  width: 100%;
+  padding:150px;
+  box-sizing: border-box;
+  padding: 17px;
+  text-align: center;
+  font-size: 18px;
+}
+#generator {
+  display: flex;
+  flex-direction: column;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+  align-items: center;
+}
+#generator  button {
+	margin: 15px 0px;
+	width: 90%;
+	font-weight: 700;
+}
+#generator > button:active {
+  background-color:#e6b900;
+}
+#generated {
+	box-sizing: border-box;
+	width: 90%;
+  padding: 20px;
+	background-color: #FFFFFF;
+	text-align: center;
+  font-size: 18px;
+}
+
+ 
+  @media (max-width: 480px) {
+ button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left:10px;
+  margin-right:0px;
+ }
+ .submit{
+  display: flex;
+	flex-direction: column;
+	justify-content: center;
+  size:15px;
+  margin-left:12px;
+  margin-right:120px;
+
+ }
+input{
+height: 40px;
+width: 70%;
+padding-right: 0px;
+ }
+ #list, .list-item {
+  display: flexbox;
+	flex-direction: column;
+  margin-left:6px;
+ }
+ .topnav a.icon {
+  font-size:24px;
+}
+ .topnav {
+   float: right;
+ }
+ #generatorpart {
+  margin-left:2px;
+  width:90%;
+  margin-right:50px;
+ }
+ #generator button {
+  display: flex;
+	flex-direction: column;
+	justify-content: center;
+  margin-top:140px;
+ }
+ 
   
+
+  .topnav.responsive {
+   position: absolute;
+  }
+  .topnav.responsive .icon {
+  position: relative;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    text-align: left;
+  }
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon {
+      display: flex;
+      
+    }
+}
+/* fin css andrea*/
+
   /*smooth*/
   .module {
     scroll-behavior: [ auto | smooth ];
