--- a/css/style.css
+++ b/css/style.css
@@ -1,415 +1,387 @@
-
-  h2{
-    font-family: "anton", sans serif;
-    font-size: 3.5em;
-    color: #ffffff;
-
-  }
-  /*smooth*/
-  .module {
-    scroll-behavior: [ auto | smooth ];
-   /*flex*/
-  }
-  html, body: {
-    font-family: "Merriweather", sans serif;
-    margin:0;
-    padding:0;
-  }
-  .fullpage {
-    display:flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content:space-between;
-    margin:0 auto;
-    position:absolute;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    -webkit-animation: color-change-2x 10s linear infinite alternate both;
-	  animation: color-change-2x 10s linear infinite alternate both;
-  }
-.content {
-  z-index: 5;
- }
-  .middle {
-    padding-left: 10px;
-    padding-top:20px;
-    display:flex;
-    justify-content:space-around;
-    flex-wrap: wrap;
-   
-  }
-  .header {
-  height:50px;
-  background-color: #b22cff;
-  }
-  .navbar{
-  z-index: 100;
-  }
-  .sidebar {
-    width:40rem;
-    margin:0px;
-    padding:0px;
-    align-content: center;
-    text-align: center;
-    box-align: center;
-  }
-  .footer {
-    padding:0px;
-    margin:0px;
-    background-color:#CCCCCC;
-    text-align:center;
-    height:2rem;	
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    position:absolute;
-    z-index: 30;
-  
-  }
-  /*anim fd*/
-  @-webkit-keyframes color-change-2x {
-    0% {
-      background: #19dcea;
-    }
-    100% {
-      background: #b22cff;
-    }
-  }
-  @keyframes color-change-2x {
-    0% {
-      background: #19dcea;
-    }
-    100% {
-      background: #b22cff;
-    }
-  }
-  
-    /*animation main*/
-    .motion {
-    -webkit-animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) 0.3s 1 both;
-            animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) 0.3s 1 both;
-  }
-  
-  @-webkit-keyframes shake-horizontal {
-    0%,
-    100% {
-      -webkit-transform: translateX(0);
-              transform: translateX(0);
-    }
-    10%,
-    30%,
-    50%,
-    70% {
-      -webkit-transform: translateX(-10px);
-              transform: translateX(-10px);
-    }
-    20%,
-    40%,
-    60% {
-      -webkit-transform: translateX(10px);
-              transform: translateX(10px);
-    }
-    80% {
-      -webkit-transform: translateX(8px);
-              transform: translateX(8px);
-    }
-    90% {
-      -webkit-transform: translateX(-8px);
-              transform: translateX(-8px);
-    }
-  }
-  @keyframes shake-horizontal {
-    0%,
-    100% {
-      -webkit-transform: translateX(0);
-              transform: translateX(0);
-    }
-    10%,
-    30%,
-    50%,
-    70% {
-      -webkit-transform: translateX(-10px);
-              transform: translateX(-10px);
-    }
-    20%,
-    40%,
-    60% {
-      -webkit-transform: translateX(10px);
-              transform: translateX(10px);
-    }
-    80% {
-      -webkit-transform: translateX(8px);
-              transform: translateX(8px);
-    }
-    90% {
-      -webkit-transform: translateX(-8px);
-              transform: translateX(-8px);
-    }
-  
-  }
-  /*telephone avec main*/
-  #callTOaction{
-  font-family: "Merriweather", sans serif;
-  font-size: 1.8em;
-  position:absolute;
-  top: 31.5rem;
-  right: 17rem; 
-  }
-  button:focus {outline-style:none;
-  }
-  #cellphone{
-    text-align: center;
-    position:relative;
-    box-align: center;
-    }
-  
-  #noms{filter: blur(7px);
-    font-family: "anton", sans serif;
-    font-size: 2.5em;
-    color: bisque;
-    top: 9rem;
-    right: 17rem;
-    position:absolute;
-  }
-  p{
-  font-size: 28px;
- 
+/*smooth*/
+.module {
+  scroll-behavior: [ auto | smooth ];
+ /*flex*/
 }
- /*style du bouton type Iphone*/
+html, body {
+  font-family: "Merriweather", sans serif;
+  margin:0;
+  padding:0;
+}
+.fullpage {
+  display:flex;
+  flex-direction: column;
+  justify-content:space-between;
+  margin:0 auto;
+  position:absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+}
+.content {
+z-index: 5;
+}
+.middle {
+  padding-left: 10px;
+  padding-top:20px;
+  display:flex;
+  justify-content:space-around;
+  flex-wrap: wrap;
+  -webkit-animation: color-change-2x 10s linear infinite alternate both;
+  animation: color-change-2x 10s linear infinite alternate both;
+}
+.header {
+height:50px;
+background-color: #b22cff;
+}
+.navbar{
+z-index: 100;
+}
+.sidebar {
+  margin:0px;
+  padding:0px;
 
-  input[type=button], input[type=submit], input[type=reset], button, .button {
-    padding: 5px 15px;
-    margin: 3px 4px;
-    display: inline-block;
-    color: #959191;
-    font-size: 26px;
-    cursor: pointer;
-    background: #FFFFFF;
-    background: linear-gradient(top, #FFFFFF 0%, #e6e6e6 100%);
-    background: -moz-linear-gradient(top, #FFFFFF 0%, #e6e6e6 100%);
-    background: -webkit-linear-gradient(top, #FFFFFF 0%, #e6e6e6 100%);
-    background: -o-linear-gradient(top, #FFFFFF 0%, #e6e6e6 100%);
-    border: 1px solid #9D9999;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -o-border-radius: 5px;
-    box-shadow:0px 0px 2px 1px rgba(98, 98, 98, 0.25), inset 1px 1px 0px 0px rgba(255, 255, 255, 0.25);
-    -moz-box-shadow:0px 0px 2px 1px rgba(98, 98, 98, 0.25), inset 1px 1px 0px 0px rgba(255, 255, 255, 0.25);
-    -webkit-box-shadow:0px 0px 2px 1px rgba(98, 98, 98, 0.25), inset 1px 1px 0px 0px rgba(255, 255, 255, 0.25);
-    -o-box-shadow:0px 0px 2px 1px rgba(98, 98, 98, 0.25), inset 1px 1px 0px 0px rgba(255, 255, 255, 0.25);
+}
+.footer {
+  padding:0px;
+  margin:0px;
+  background-color:#CCCCCC;
+  text-align:center;
+  height:2rem;	
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  position:absolute;
+  z-index: 30;
+
+}
+/*anim fd*/
+@-webkit-keyframes color-change-2x {
+  0% {
+    background: #19dcea;
   }
-  input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover, button:hover, .button:hover {
-    background: linear-gradient(top, #ffffff 0%, #FFFFFF 100%);
-    background: -moz-linear-gradient(top, #ffffff 0%, #FFFFFF 100%);
-    background: -webkit-linear-gradient(top, #ffffff 0%, #FFFFFF 100%);
-    background: -o-linear-gradient(top, #ffffff 0%, #FFFFFF 100%);
+  100% {
+    background: #b22cff;
   }
-  input[type=button]:active, input[type=submit]:active, input[type=reset]:active, button:active, .button:active{
-    opacity:0.8;
+}
+@keyframes color-change-2x {
+  0% {
+    background: #19dcea;
   }
-#logoanim{
-  z-index: 2;
-  padding-top: 30%;
-  padding-left: 5%;
-  padding-bottom: 0%;
-  width: 35%;
-  animation: infinite;
-  animation-name: intensifies;
+  100% {
+    background: #b22cff;
+  }
+}
+
+  /*animation main*/
+  .motion {
+  -webkit-animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) 0.3s 1 both;
+          animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) 0.3s 1 both;
+}
+
+@-webkit-keyframes shake-horizontal {
+  0%,
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  10%,
+  30%,
+  50%,
+  70% {
+    -webkit-transform: translateX(-10px);
+            transform: translateX(-10px);
+  }
+  20%,
+  40%,
+  60% {
+    -webkit-transform: translateX(10px);
+            transform: translateX(10px);
+  }
+  80% {
+    -webkit-transform: translateX(8px);
+            transform: translateX(8px);
+  }
+  90% {
+    -webkit-transform: translateX(-8px);
+            transform: translateX(-8px);
+  }
+}
+@keyframes shake-horizontal {
+  0%,
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  10%,
+  30%,
+  50%,
+  70% {
+    -webkit-transform: translateX(-10px);
+            transform: translateX(-10px);
+  }
+  20%,
+  40%,
+  60% {
+    -webkit-transform: translateX(10px);
+            transform: translateX(10px);
+  }
+  80% {
+    -webkit-transform: translateX(8px);
+            transform: translateX(8px);
+  }
+  90% {
+    -webkit-transform: translateX(-8px);
+            transform: translateX(-8px);
+  }
+
+}
+/*telephone avec main*/
+#callTOaction{
+font-family: "Merriweather", sans serif;
+font-size: 1.8em;
+position:absolute;
+top: 24.2rem;
+right: 15rem;
+}
+button:focus {outline-style:none;
+}
+#cellphone{
+  position:relative;
+  }
+
+#noms{filter: blur(7px);
+  font-family: "anton", sans serif;
+  font-size: 2.5em;
+  color: bisque;
+  top: 9rem;
+  right: 15rem;
+  position:absolute;
+  text-align: center;
+}
+p{
+font-size: 28px;
+
+}
+/*style du bouton type Iphone*/
+
+input[type=button], input[type=submit], input[type=reset], button, .button {
+  padding: 5px 15px;
+  margin: 3px 4px;
+  display: inline-block;
+  color: #959191;
+  font-size: 26px;
+  cursor: pointer;
+  background: #FFFFFF;
+  background: linear-gradient(top, #FFFFFF 0%, #e6e6e6 100%);
+  background: -moz-linear-gradient(top, #FFFFFF 0%, #e6e6e6 100%);
+  background: -webkit-linear-gradient(top, #FFFFFF 0%, #e6e6e6 100%);
+  background: -o-linear-gradient(top, #FFFFFF 0%, #e6e6e6 100%);
+  border: 1px solid #9D9999;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  box-shadow:0px 0px 2px 1px rgba(98, 98, 98, 0.25), inset 1px 1px 0px 0px rgba(255, 255, 255, 0.25);
+  -moz-box-shadow:0px 0px 2px 1px rgba(98, 98, 98, 0.25), inset 1px 1px 0px 0px rgba(255, 255, 255, 0.25);
+  -webkit-box-shadow:0px 0px 2px 1px rgba(98, 98, 98, 0.25), inset 1px 1px 0px 0px rgba(255, 255, 255, 0.25);
+  -o-box-shadow:0px 0px 2px 1px rgba(98, 98, 98, 0.25), inset 1px 1px 0px 0px rgba(255, 255, 255, 0.25);
+}
+input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover, button:hover, .button:hover {
+  background: linear-gradient(top, #ffffff 0%, #FFFFFF 100%);
+  background: -moz-linear-gradient(top, #ffffff 0%, #FFFFFF 100%);
+  background: -webkit-linear-gradient(top, #ffffff 0%, #FFFFFF 100%);
+  background: -o-linear-gradient(top, #ffffff 0%, #FFFFFF 100%);
+}
+input[type=button]:active, input[type=submit]:active, input[type=reset]:active, button:active, .button:active{
+  opacity:0.8;
+}
+.logoanim{
+z-index: 2;
+padding-top: 30%;
+padding-bottom: 0%;
+padding-right: 10%;
+width: 25%;
+animation: infinite;
 animation-timing-function: ease-out;
-transform-origin: bottom center;
+transform-origin: bottom left;
+animation-name: intensifies;
 animation-duration: 5s;
 opacity: 0.3;
- 
 }
 
 /**
- * Intensifies
- * - Slowly increases in shaking and madness
- */
- @keyframes intensifies {
-  0% {
-    transform: translate(1px, 1px) scale(1);
-  }
-  1% {
-    transform: translate(-1px, -1px) scale(1.02);
-  }
-  2% {
-    transform: translate(1px, 2px) scale(1.04);
-  }
-  3% {
-    transform: translate(-3px, -1px) scale(1.06);
-  }
-  4% {
-    transform: translate(3px, 3px) scale(1.08);
-  }
-  5% {
-    transform: translate(-4px, -5px) scale(1.1);
-  }
-  20% {
-    transform: translate(12px, 7px) scale(1.4);
-  }
-  21% {
-    transform: translate(-11px, -13px) scale(1.42);
-  }
-  22% {
-    transform: translate(4px, 22px) scale(1.44);
-  }
-  23% {
-    transform: translate(-13px, -24px) scale(1.46);
-  }
-  24% {
-    transform: translate(23px, 5px) scale(1.48);
-  }
-  25% {
-    transform: translate(-15px, -16px) scale(1.5);
-  }
-  26% {
-    transform: translate(16px, 7px) scale(1.52);
-  }
-  27% {
-    transform: translate(-25px, -11px) scale(1.54);
-  }
-  28% {
-    transform: translate(25px, 20px) scale(1.56);
-  }
-  29% {
-    transform: translate(-16px, -20px) scale(1.58);
-  }
-  30% {
-    transform: translate(12px, 23px) scale(1.6);
-  }
-  31% {
-    transform: translate(-15px, -18px) scale(1.62);
-  }
-  32% {
-    transform: translate(3px, 27px) scale(1.64);
-  }
-  33% {
-    transform: translate(-18px, -14px) scale(1.66);
-  }
-  34% {
-    transform: translate(14px, 9px) scale(1.68);
-  }
-  35% {
-    transform: translate(-28px, -23px) scale(1.7);
-  }
-  36% {
-    transform: translate(12px, 30px) scale(1.72);
-  }
-  37% {
-    transform: translate(-25px, -27px) scale(1.74);
-  }
-  38% {
-    transform: translate(39px, 1px) scale(1.76);
-  }
-  39% {
-    transform: translate(-10px, -32px) scale(1.78);
-  }
-  40% {
-    transform: translate(15px, 35px) scale(1.8);
-  }
-  41% {
-    transform: translate(-27px, -15px) scale(1.82);
-  }
-  42% {
-    transform: translate(15px, 41px) scale(1.84);
-  }
-  43% {
-    transform: translate(-39px, -4px) scale(1.86);
-  }
-  44% {
-    transform: translate(34px, 19px) scale(1.88);
-  }
-  45% {
-    transform: translate(-4px, -45px) scale(1.9);
-  }
-  46% {
-    transform: translate(38px, 7px) scale(1.92);
-  }
-  47% {
-    transform: translate(-21px, -1px) scale(1.94);
-  }
-  48% {
-    transform: translate(19px, 6px) scale(1.96);
-  }
-  49% {
-    transform: translate(-49px, -25px) scale(1.98);
-  }
-  50% {
-    transform: translate(25px, 25px) scale(2);
-  }
-  51% {
-    transform: translate(-33px, -24px) scale(2.02);
-  }
-  52% {
-    transform: translate(45px, 36px) scale(2.04);
-  }
-  53% {
-    transform: translate(-44px, -7px) scale(2.06);
-  }
-  54% {
-    transform: translate(30px, 28px) scale(2.08);
-  }
-  55% {
-    transform: translate(-4px, -27px) scale(2.1);
-  }
-  56% {
-    transform: translate(17px, 18px) scale(2.12);
-  }
-  57% {
-    transform: translate(-4px, -12px) scale(2.14);
-  }
-  58% {
-    transform: translate(1px, 50px) scale(2.16);
-  }
-  59% {
-    transform: translate(-8px, -36px) scale(2.18);
-  }
-  60% {
-    transform: translate(29px, 26px) scale(2.2);
-  }
-  61% {
-    transform: translate(-24px, -21px) scale(2.22);
-  }
-  62% {
-    transform: translate(60px, 21px) scale(2.24);
-  }
-  63% {
-    transform: translate(-9px, -36px) scale(2.26);
-  }
-  64% {
-    transform: translate(44px, 1px) scale(2.28);
-  }
-  65% {
-    transform: translate(-38px, -40px) scale(2.3);
-  }
-  66% {
-    transform: translate(42px, 33px) scale(2.32);
-  }
-  67% {
-    transform: translate(-17px, -45px) scale(2.34);
-  }
-  68% {
-    transform: translate(1px, 17px) scale(2.36);
-  }
-  69% {
-    transform: translate(-20px, -62px) scale(2.38);
-  }
-  70% {
-    transform: translate(6px, 53px) scale(2.4);
-  }
-  71% {
-    transform: translate(-64px, -14px) scale(2.42);
-  }
-  72% {
-    transform: translate(67px, 48px) scale(2.44);
-  }
-    
-  100% {
-    transform: translate(0, 0) rotate(0deg);
-  }
+* Intensifies
+* - Slowly increases in shaking and madness
+*/
+@keyframes intensifies {
+0% {
+  transform: translate(1px, 1px) scale(1);
+}
+1% {
+  transform: translate(-1px, -1px) scale(1.02);
+}
+2% {
+  transform: translate(1px, 2px) scale(1.04);
+}
+3% {
+  transform: translate(-3px, -1px) scale(1.06);
+}
+4% {
+  transform: translate(3px, 3px) scale(1.08);
+}
+5% {
+  transform: translate(-4px, -5px) scale(1.1);
+}
+20% {
+  transform: translate(12px, 7px) scale(1.4);
+}
+21% {
+  transform: translate(-11px, -13px) scale(1.42);
+}
+22% {
+  transform: translate(4px, 22px) scale(1.44);
+}
+23% {
+  transform: translate(-13px, -24px) scale(1.46);
+}
+24% {
+  transform: translate(23px, 5px) scale(1.48);
+}
+25% {
+  transform: translate(-15px, -16px) scale(1.5);
+}
+26% {
+  transform: translate(16px, 7px) scale(1.52);
+}
+27% {
+  transform: translate(-25px, -11px) scale(1.54);
+}
+28% {
+  transform: translate(25px, 20px) scale(1.56);
+}
+29% {
+  transform: translate(-16px, -20px) scale(1.58);
+}
+30% {
+  transform: translate(12px, 23px) scale(1.6);
+}
+31% {
+  transform: translate(-15px, -18px) scale(1.62);
+}
+32% {
+  transform: translate(3px, 27px) scale(1.64);
+}
+33% {
+  transform: translate(-18px, -14px) scale(1.66);
+}
+34% {
+  transform: translate(14px, 9px) scale(1.68);
+}
+35% {
+  transform: translate(-28px, -23px) scale(1.7);
+}
+36% {
+  transform: translate(12px, 30px) scale(1.72);
+}
+37% {
+  transform: translate(-25px, -27px) scale(1.74);
+}
+38% {
+  transform: translate(39px, 1px) scale(1.76);
+}
+39% {
+  transform: translate(-10px, -32px) scale(1.78);
+}
+40% {
+  transform: translate(15px, 35px) scale(1.8);
+}
+41% {
+  transform: translate(-27px, -15px) scale(1.82);
+}
+42% {
+  transform: translate(15px, 41px) scale(1.84);
+}
+43% {
+  transform: translate(-39px, -4px) scale(1.86);
+}
+44% {
+  transform: translate(34px, 19px) scale(1.88);
+}
+45% {
+  transform: translate(-4px, -45px) scale(1.9);
+}
+46% {
+  transform: translate(38px, 7px) scale(1.92);
+}
+47% {
+  transform: translate(-21px, -1px) scale(1.94);
+}
+48% {
+  transform: translate(19px, 6px) scale(1.96);
+}
+49% {
+  transform: translate(-49px, -25px) scale(1.98);
+}
+50% {
+  transform: translate(25px, 25px) scale(2);
+}
+51% {
+  transform: translate(-33px, -24px) scale(2.02);
+}
+52% {
+  transform: translate(45px, 36px) scale(2.04);
+}
+53% {
+  transform: translate(-44px, -7px) scale(2.06);
+}
+54% {
+  transform: translate(30px, 28px) scale(2.08);
+}
+55% {
+  transform: translate(-4px, -27px) scale(2.1);
+}
+56% {
+  transform: translate(17px, 18px) scale(2.12);
+}
+57% {
+  transform: translate(-4px, -12px) scale(2.14);
+}
+58% {
+  transform: translate(1px, 50px) scale(2.16);
+}
+59% {
+  transform: translate(-8px, -36px) scale(2.18);
+}
+60% {
+  transform: translate(29px, 26px) scale(2.2);
+}
+61% {
+  transform: translate(-24px, -21px) scale(2.22);
+}
+62% {
+  transform: translate(60px, 21px) scale(2.24);
+}
+63% {
+  transform: translate(-9px, -36px) scale(2.26);
+}
+64% {
+  transform: translate(44px, 1px) scale(2.28);
+}
+65% {
+  transform: translate(-38px, -40px) scale(2.3);
+}
+66% {
+  transform: translate(42px, 33px) scale(2.32);
+}
+67% {
+  transform: translate(-17px, -45px) scale(2.34);
+
+
+}
+100% {
+  transform: translate(0, 0) rotate(0deg);
 }
 
+}
