effacé le code du navbar double

--- a/css/style.css
+++ b/css/style.css
@@ -372,9 +372,9 @@ width: 25%;
 
 }
 
-* ----------------------------------------
-* animation slide-out-X
-* ----------------------------------------
+/* 
+animation slide-out-X
+
 */
 @-webkit-keyframes slideoutX {
   0% {
