--- a/css/style.css
+++ b/css/style.css
@@ -414,101 +414,80 @@ animation slide-out-X
 	-webkit-animation: slideoutX 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 	        animation: slideoutX 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
-/* debut css andrea navbar*/
-  .navbar {
-    font-size: 18px;
-    background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    padding-bottom: 10px;
-  }
+
+
+
+/*nouveau css pour nav*/
+header {
+  background-color: #fff;
+}
+.banner-area {
+  max-width: 960px;
+  margin:0 auto;
+  color: #000;
+  margin-right: 55px;
+}
+.menu-area h1 {
+  padding:10px;
+  text-align: center;
+}
+.menu-area {
+display: flex;
+list-style: none;
+}
+.menu-area li {
+  background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);;
+  flex:1;
+  text-align: center;
+  color: white;
+  font-size: 15px;
+  text-align: center;
   
-  .main-nav {
-    list-style-type: none;
-    display: none;
-  }
-  
-  .nav-links,
-  .logo {
-    text-decoration: none;
-    color: rgba(255, 255, 255, 0.7);
-  }
-  
-  .main-nav li {
-    text-align: center;
-    margin: 15px auto;
-  }
-  
-  .logo {
-    display: inline-block;
-    font-size: 22px;
-    margin-top: 10px;
-    margin-left: 20px;
-  }
-  
-  .navbar-toggle {
-    position: absolute;
-    top: 10px;
-    right: 20px;
+}
+.menu-area li:not(:first-child) {
+  border-left: 2px solid #fff;
+  border-right:2px solid #fff;
+  box-shadow:8px 4px 4px #CCCCCC;
+}
+.menu-area li:not(:last-child) {
+  border-right: 2px solid #fff;
+  border-left: 2px solid #fff;
+  box-shadow:8px 4px 4px  #CCCCCC;
+}
+.menu-area li:hover {
+  background-color: #333;
+}
+.menu-area li a {
+  display: block;
+  padding:15px 0;
+  color: inherit;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+input[type=checkbox], .res-menu {
+  display: none;
+}
+@media screen and (max-width 600px) {
+  .res-menu {
+    display: flex;
+    justify-content: center;
+    background-color: #000;
     cursor: pointer;
-    color: rgba(255, 255, 255, 0.8);
-    font-size: 24px;
+    padding:20px 0;
+    text-transform: uppercase;
   }
-  
-  #chkToggle {
+  .menu-area {
     display: none;
   }
-  
-  #chkToggle:checked + ul.main-nav {
+  input[type=checkbox]:checked ~.menu-area {
     display: block;
   }
-  
-  @media screen and (min-width: 768px) {
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      padding-bottom: 0;
-      height: 70px;
-      align-items: center;
-    }
-  
-    #chkToggle:checked + ul.main-nav {
-      display: flex;
-    }
-  
-    .main-nav {
-      display: flex;
-      margin-right: 30px;
-      flex-direction: row;
-      justify-content: flex-end;
-    }
-  
-    .main-nav li {
-      margin: 0;
-    }
-  
-    .nav-links {
-      margin-left: 40px;
-    }
-  
-    .logo {
-      margin-top: 0;
-    }
-  
-    .navbar-toggle {
-      display: none;
-    }
-  
-    .logo:hover,
-    .nav-links:hover {
-      color: rgba(255, 255, 255, 1);
-    }
+  .menu-area li:not(:last-child) {
+    border:0;
   }
-.logo {
-  font-family: "anton", sans serif;
-  display: inline-block;
-  font-size: 40px;
-  margin-top: 10px;
-  margin-left: 20px;
+  .menu-area li:not(:last-child) {
+    margin:2px 0;
+  }
 }
 
 /* fin css andrea*/
